--- a/ms-core-user-local.properties
+++ b/ms-core-user-local.properties
@@ -44,9 +44,10 @@ spring.jpa.properties.hibernate.query.plan_cache_max_size=4096
 
 ########################################################################## Logging configuration
 
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.jpa.show-sql=true
+logstash.ip=localhost:5044
 
 #logging.logback.rollingpolicy.max-file-size=1MB
 #logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
