--- a/ms-core-user-local.properties
+++ b/ms-core-user-local.properties
@@ -3,7 +3,7 @@ spring.profiles.active=dev
 
 ########################################################################## kafka broker
 
-spring.kafka.bootstrap-servers=10.104.20.67:9092
+spring.kafka.bootstrap-servers=localhost:9092
 
 ########################################################################## persistence configuration
 
@@ -78,9 +78,8 @@ validator.first.name.regex=^[a-zA-Z]{4,21}$
 
 ########################################################################## WEB CONTAINER
 
+### Server , connections and sessions
 server.port=8081
-
-### Connections and sessions
 spring.tomcat.max-wait=20000
 spring.tomcat.max-active=50
 spring.tomcat.max-idle=20
