--- a/ms-core-user-pro.properties
+++ b/ms-core-user-pro.properties
@@ -4,7 +4,6 @@ spring.profiles.active=dev
 ########################################################################## kafka broker
 
 spring.kafka.bootstrap-servers=10.104.20.67:9092
-#spring.kafka.bootstrap-servers=10.107.142.212:9092
 
 ########################################################################## persistence configuration
 
@@ -12,8 +11,7 @@ spring.kafka.bootstrap-servers=10.104.20.67:9092
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=WbrTpN3g7q
-#spring.datasource.url=jdbc:postgresql://10.99.56.61:5432/padd001
-spring.datasource.url=jdbc:postgresql://localhost:32000/padd001
+spring.datasource.url=jdbc:postgresql://10.99.56.61:5432/padd001
 
 ### HikariCP configuration(POOL)
 spring.datasource.hikari.minimumIdle=0
@@ -48,6 +46,7 @@ spring.jpa.properties.hibernate.query.plan_cache_max_size=4096
 #logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.hibernate.jpa.show-sql=true
+logstash.ip=10.105.239.222:5044
 
 #logging.logback.rollingpolicy.max-file-size=1MB
 #logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
@@ -70,17 +69,16 @@ management.endpoints.web.exposure.exclude=loggers
 
 ### USER VALIDATOR ###
 validator.user.name.messages=The field userName has incorrect value.
-validator.user.name.regex=^[a-z0-9A-Z]{4,20}$
+validator.user.name.regex=^[a-z0-9A-Z]{4,21}$
 validator.last.name.messages=The field lastName has incorrect value.
-validator.last.name.regex=^[a-zA-Z]{4,20}$
+validator.last.name.regex=^[a-zA-Z]{4,21}$
 validator.first.name.messages=The field firstName has incorrect value.
-validator.first.name.regex=^[a-zA-Z]{4,20}$
+validator.first.name.regex=^[a-zA-Z]{4,21}$
 
 ########################################################################## WEB CONTAINER
 
-server.port=8082
-
-### Connections and sessions
+### Server , connections and sessions
+server.port=8080
 spring.tomcat.max-wait=20000
 spring.tomcat.max-active=50
 spring.tomcat.max-idle=20
